# RouteSim

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: generate_charts.py  run_all.py
configs/: default.toml  disaggregated_pd.toml  mooncake_demo.toml  multi_model.toml  production_h100x8.toml
crates/routesim-algorithms/: Cargo.toml
crates/routesim-algorithms/src/: cost_escalation.rs  least_kv.rs  least_outstanding.rs  lib.rs  prefix_aware.rs  prefix_overlap.rs  round_robin.rs  session_affinity.rs  traits.rs
crates/routesim-core/: Cargo.toml
crates/routesim-core/benches/: simulation_bench.rs
crates/routesim-core/src/: backend.rs  clock.rs  config.rs  engine.rs  kv_cache.rs  lib.rs  main.rs  metrics.rs  request.rs  topology.rs  trace.rs
crates/routesim-python/: Cargo.toml
crates/routesim-python/src/: lib.rs
docs/: design.md  usage.md
examples/: compare_algorithms.py  custom_algorithm.py  disaggregated_sim.py  mooncake_comparison.py  mooncake_trace_stats.py  quickstart.py  replay_production_trace.py
python/routesim/: __init__.py  algorithm.py  cli.py  report.py  trace_gen.py  visualize.py
scripts/: download_mooncake_traces.sh
tests/python/: test_basic_sim.py  test_custom_algo.py  test_trace_gen.py
tests/rust/: test_algorithms.rs  test_engine.rs  test_kv_cache.rs  test_trace_ingestion.rs
traces/: example_trace.jsonl  mooncake_sample.jsonl
