[workspace]
resolver = "2"
members = [
    "crates/routesim-core",
    "crates/routesim-algorithms",
    "crates/routesim-python",
]
default-members = [
    "crates/routesim-core",
    "crates/routesim-algorithms",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/routesim/routesim"
rust-version = "1.75"

[workspace.dependencies]
routesim-core = { path = "crates/routesim-core" }
routesim-algorithms = { path = "crates/routesim-algorithms" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
csv = "1.3"
rand = "0.8"
rand_chacha = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
