[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "routesim"
version = "0.1.0"
description = "Benchmark LLM routing algorithms without GPUs"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
cli = ["click>=8.0"]
viz = ["matplotlib>=3.5", "plotly>=5.0"]
all = ["click>=8.0", "matplotlib>=3.5", "plotly>=5.0"]
dev = ["pytest>=7.0", "click>=8.0", "ruff", "black"]

[project.scripts]
routesim-py = "routesim.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "routesim.routesim"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
