[package]
name = "routesim-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for RouteSim LLM load balancer simulator"

[lib]
name = "routesim"
crate-type = ["cdylib"]

[dependencies]
routesim-core = { workspace = true }
routesim-algorithms = { workspace = true }
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { workspace = true }
serde_json = { workspace = true }
